Some more love to widget

--- a/app/index.html
+++ b/app/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>Real Reality</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width">
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
@@ -25,12 +25,13 @@
     <div ng-include="'views/main.html'" ng-controller="MainCtrl as main"></div>
     </div>
 
-<!--    <div class="footer">
+    <div class="footer">
       <div class="container">
-        <p><span class="glyphicon glyphicon-heart"></span> from Ivo, Michal, Lukáš</p>
+        <p class="text-muted">Made with <span class="glyphicon glyphicon-heart"></span>
+          and <span class="glyphicon glyphicon-headphones"></span> by Ivoš, Michal, Lukáš</p>
       </div>
     </div>
-  -->
+
 
 
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID -->
