Add download teaser

--- a/app/index.html
+++ b/app/index.html
@@ -21,6 +21,13 @@
 
     <!-- Add your site or application content here -->
 
+    <header>
+      <div class="alert alert-danger" role="alert">
+        <strong>Cool!</strong> We released Google Chrome plugin.
+        <a href="https://chrome.google.com/webstore/detail/real-reality/obkcimklomeknmfjmglfggenjijioenj?utm_source=gmail"
+        target="_blank" class="btn btn-danger pull-right download"><span class="glyphicon glyphicon-download-alt"></span> Install now</a>
+      </div>
+    </header>
     <div class="container-fluid">
     <div ng-include="'views/main.html'" ng-controller="MainCtrl as main"></div>
     </div>
